fix: gap

--- a/client/src/app/pages/rsvp-page/rsvp-page.component.scss
+++ b/client/src/app/pages/rsvp-page/rsvp-page.component.scss
@@ -57,7 +57,7 @@ $black: #000000;
 .rsvp-form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 5px;
   margin-top: 20px;
   width: 100%;
   height: 100%;
